# algorithm

./: README.md
algorithm/: CMakeLists.txt  algorithm_zh_CN.ts  analyser.cpp  analyser.h  backtracking.cpp  backtracking.h  customScrollContainer.cpp  customScrollContainer.h  customWidgets.cpp  customWidgets.h  dialog.cpp  dialog.h  dialog.ui  generate.cpp  generate.h  graph.cpp  graph.h  graph_view.cpp  greedy.cpp  greedy.h  icons.qrc  knapsack.cpp  knapsack.h  lcs.cpp  lcs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixchain.cpp  matrixchain.h  maxsum.cpp  maxsum.h  mycanvas.cpp  opengl.cpp  opengl.h  slidepage.cpp  slidepage.h  subwindow.cpp  subwindow.h  (+1 more)
algorithm/header/: extra.hpp  graph.h  implement.h  painteditem.hpp
algorithm/icons/: chess.psd
algorithm/layout/: Ellipse.qml  GraphBuilder.qml  Line.qml  Main.qml  Menu.qml  Modeless.qml  MouseArea_.qml  Panel.qml  Toast.qml
algorithm/lib/fmt/: fmt.lib  fmtd.lib
algorithm/source/: graph.cpp  implement.cpp  main.cpp
algorithm/values/: Colors.qml  MenuModel.qml  PanelModel.qml  colors.txt  map.txt  star.txt
